# OS

./: CMakeLists.txt  Reporter.cpp  Structure.h  creator.cpp  main.cpp
lab1/: lab1.sln
lab1/lab1/: Reporter.cpp  Structure.h  creator.cpp  main.cpp
lab2/: CMakeLists.txt
lab2/src/: Data.h  Threads.cpp  Threads.h  main.cpp
lab2/tests/: CMakeLists.txt  tests.cpp
lab3/lab3/: lab3.cpp  lab3.h
